# CIR2-CourseAPied

./: .gitignore  CMakeLists.txt  README.md
doc/: Presentation.odp
lib/: .parcours.hpp.swp  .results.cpp.swp  .simulation.cpp.swp  coureur.cpp  coureur.hpp  parcours.cpp  parcours.hpp  results.cpp  results.hpp  simulation.cpp  simulation.hpp
ressources/: coureurList.txt  coureurListTest.txt  marathon.txt  parcoursTest.txt  star.txt
results/: Sat-Dec--5-20:04:25-2020.txt  Sat-Dec--5-20:37:31-2020.txt  Sat-Dec--5-22:51:22-2020.txt
src/: main.cpp
